--- a/index.html
+++ b/index.html
@@ -42,11 +42,10 @@
     "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
     "marked": "https://aistudiocdn.com/marked@^12.0.2",
     "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.4.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "vite": "https://aistudiocdn.com/vite@^7.1.10",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
-    "url": "https://aistudiocdn.com/url@^0.11.4"
+    "openai": "https://aistudiocdn.com/openai@^4.52.7"
   }
 }
 </script>
