--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "vite": "https://aistudiocdn.com/vite@^7.1.10",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
-    "url": "https://aistudiocdn.com/url@^0.11.4"
+    "openai": "https://aistudiocdn.com/openai@^6.5.0"
   }
 }
 </script>
