--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "vite": "https://aistudiocdn.com/vite@^7.1.10",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
-    "openai": "https://aistudiocdn.com/openai@^6.5.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^0.14.0",
+    "openai": "https://aistudiocdn.com/openai@^6.6.0"
   }
 }
 </script>
